@@ -47,9 +47,9 @@ Changes for 1.8.4
 - Changed failed link messages to provide more info to +A opers
 - Changed cmode +c to block all control codes (except CTCP and ISO-2022)
 - Changed RPL_TIME to include raw timestamp
-- Changed cmode +j implementation to a token bucket with distributed debt
 - Changed ident handling to ignore encrypted pidentd responses
 - Changed WATCH to apply flood penalties to repeat list requests
+- Changed failed oper attempt notices to be more useful
 - Added oper access flags for umodes ydb
 - Added string probability calculation to RWHO
 - Added automatic rejection of certain proxy types
@@ -60,6 +60,11 @@ Changes for 1.8.4
 - Fixed watch status update not being sent to local users on SVSNICK
 - Fixed a bug when source is a server on INFO
 - Fixed dcc allow's handling with quoted filenames
+
+- Changed join rate throttling (cmode +j) implementation
+    - uses a token bucket with debt to better handle distributed floods
+    - default setting for -j is now 8:6 (was 8:4)
+    - +j limits are now 2-20 joins, 1-60 seconds, ratio of 1/8 to 2/1
 
 - Reworked memory accounting:
     stats z  shows short summary
